<resources>
    <string name="app_name">EsiWeather</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Esi Weather station </string>
    <string name="nav_header_subtitle">esisbameteo.ddns.net</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_notification">Notification</string>
    <string name="menu_values">Values</string>
    <string name="menu_graphs">Graphs</string>
    <string name="menu_actions">Actions</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_logout">Logout</string>
</resources>